--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    @@include('html/head.html', {})
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    <img src="@img/404-bg.png" alt=""><img src="@img/404.jpg" alt="">
+    @@include('html/header.html', {})
     <script src="js/isWebPSupported.js"></script>
 </body>
 
