Finish adapting Header block

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,14 @@
 <header class="header">
     <div class="header__top">
         <div class="header__top-wrapper">
+            <div class="header__top-tel">
+                <div class="header__top-tel-img"><img src="@icons/header-footer/telephone-handle-silhouette.svg"
+                        alt="telephone"></div>
+                <a href="tel:+380447505011" class="header__top-tel-link"><span>+38 (044)</span> 750-50-11</a>
+                <div class="book-call">
+                    Заказать звонок
+                </div>
+            </div>
             <div class="header__top-social">
                 <div class="header__top-social-item">
                     <a href="#" class="header__top-link">
@@ -20,7 +28,7 @@
                 </div>
             </div>
             <div class="header__top-container">
-                <div class="personal-discount">
+                <div class="personal-discount_top">
                     Ваша персональная скидка - 5%
                 </div>
                 <div class="user-unit">
@@ -50,7 +58,7 @@
     <div class="header__middle">
         <div class="header__middle-wrapper">
             <div class="hamburger">
-                
+                <span></span><span></span><span></span>
             </div>
             <a href="@html/index.html" class="header__logo">
                 <div class="header__logo-img">
@@ -102,6 +110,9 @@
         </div>
     </div>
     <div class="header__bottom">
+        <div class="personal-discount_bottom">
+            Ваша персональная скидка - 5%
+        </div>
         <div class="header__bottom-wrapper">
             <nav class="header__navigation">
                 <ul class="header__list">
