--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,67 @@
+<div class="sidemenu">
+    <div class="sidemenu__heading">
+        <div class="sidemenu__logo">
+            <div class="sidemenu__logo-img">
+                <img src="@icons/logo.svg" alt="logo">
+            </div>
+            <div class="sidemenu__title">
+                Орех <br> Причерноморья
+            </div>
+        </div>
+        <div class="sidemenu__exit">
+            <img src="@icons/close-button.svg" alt="close-button">
+        </div>
+    </div>
+    <div class="sidemenu__main">
+        <div class="sidemenu__account">
+            <div class="sidemenu__login">
+                <div class="sidemenu__login-img">
+                    <img src="@icons/header-footer/man-user.svg" alt="man-user">
+                </div>
+                <div class="sidemenu__login-text">
+                    <a href="#" class="sidemenu__account-link">
+                        Вход
+                    </a>
+                </div>
+            </div>
+            <div class="sidemenu__registration">
+                <a href="#" class="sidemenu__account-link">
+                    Регистрация
+                </a>
+            </div>
+        </div>
+        <div class="sidemenu__social">
+            <div class="sidemenu__social-item">
+                <a href="#" class="sidemenu__social-link">
+                    <img src="@icons/header-footer/social/facebook.svg" alt="facebook"
+                        class="sidemenu__social-link-img">
+                </a>
+            </div>
+            <div class="sidemenu__social-item">
+                <a href="#" class="sidemenu__social-link">
+                    <img src="@icons/header-footer/social/instagram.svg" alt="instagram"
+                        class="sidemenu__social-link-img">
+                </a>
+            </div>
+            <div class="sidemenu__social-item">
+                <a href="#" class="sidemenu__social-link">
+                    <img src="@icons/header-footer/social/youtube.svg" alt="youtube" class="sidemenu__social-link-img">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="sidemenu__navigation">
+        <ul class="sidemenu__list">
+            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Магазин</a></li>
+            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">О производстве</a></li>
+            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оплата и доставка</a></li>
+            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
+            </li>
+            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Новости и статьи</a></li>
+            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Контакты</a></li>
+        </ul>
+    </div>
+</div>
 <header class="header">
     <div class="header__top">
         <div class="header__top-wrapper">
