I've made the footer block and started the Adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 
 <body>
     @@include('html/header.html', {})
-    <script src="js/isWebPSupported.js"></script>
+    @@include('html/footer.html', {})
+    @@include('html/script.html', {})
 </body>
 
 </html>
