--- a/src/html/products.html
+++ b/src/html/products.html
@@ -22,6 +22,9 @@
                 <div class="swiper-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
+                <div class="products__search">
+                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
+                </div>
             </div>
             <div class="products__info">
                 <div class="products__title">Грецкий орех</div>
@@ -58,6 +61,11 @@
                     Купить
                 </button>
             </div>
+            <div class="products__flag">
+                <div class="products__flag-img">
+                    <img src="@img/stickers/promotion.png" alt="promotion" loading="lazy">
+                </div>
+            </div>
         </div>
         <div class="products__item">
             <div class="swiper products__slider">
@@ -80,6 +88,9 @@
                 </div>
                 <div class="swiper-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
+                </div>
+                <div class="products__search">
+                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
                 </div>
             </div>
             <div class="products__info">
@@ -117,6 +128,11 @@
                     Купить
                 </button>
             </div>
+            <div class="products__flag">
+                <div class="products__flag-img">
+                    <img src="@img/stickers/new.png" alt="promotion" loading="lazy">
+                </div>
+            </div>
         </div>
         <div class="products__item">
             <div class="swiper products__slider">
@@ -139,6 +155,9 @@
                 </div>
                 <div class="swiper-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
+                </div>
+                <div class="products__search">
+                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
                 </div>
             </div>
             <div class="products__info">
@@ -198,6 +217,9 @@
                 </div>
                 <div class="swiper-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
+                </div>
+                <div class="products__search">
+                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
                 </div>
             </div>
             <div class="products__info">
@@ -258,6 +280,9 @@
                 <div class="swiper-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
+                <div class="products__search">
+                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
+                </div>
             </div>
             <div class="products__info">
                 <div class="products__title">Грецкий орех</div>
@@ -316,6 +341,9 @@
                 </div>
                 <div class="swiper-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
+                </div>
+                <div class="products__search">
+                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
                 </div>
             </div>
             <div class="products__info">
