--- a/src/html/products.html
+++ b/src/html/products.html
@@ -16,10 +16,10 @@
                                 loading="lazy"></div>
                     </div>
                 </div>
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev products-button-prev">
                     <img src="@icons/product/arrow-prev.svg" alt="arrow-left">
                 </div>
-                <div class="swiper-button-next">
+                <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
                 <div class="products__search">
@@ -83,10 +83,10 @@
                                 loading="lazy"></div>
                     </div>
                 </div>
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev products-button-prev">
                     <img src="@icons/product/arrow-prev.svg" alt="arrow-left">
                 </div>
-                <div class="swiper-button-next">
+                <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
                 <div class="products__search">
@@ -150,10 +150,10 @@
                                 loading="lazy"></div>
                     </div>
                 </div>
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev products-button-prev">
                     <img src="@icons/product/arrow-prev.svg" alt="arrow-left">
                 </div>
-                <div class="swiper-button-next">
+                <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
                 <div class="products__search">
@@ -212,10 +212,10 @@
                                 alt="product" loading="lazy"></div>
                     </div>
                 </div>
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev products-button-prev">
                     <img src="@icons/product/arrow-prev.svg" alt="arrow-left">
                 </div>
-                <div class="swiper-button-next">
+                <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
                 <div class="products__search">
@@ -274,10 +274,10 @@
                                 alt="product" loading="lazy"></div>
                     </div>
                 </div>
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev products-button-prev">
                     <img src="@icons/product/arrow-prev.svg" alt="arrow-left">
                 </div>
-                <div class="swiper-button-next">
+                <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
                 <div class="products__search">
@@ -336,10 +336,10 @@
                                 alt="product" loading="lazy"></div>
                     </div>
                 </div>
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev products-button-prev">
                     <img src="@icons/product/arrow-prev.svg" alt="arrow-left">
                 </div>
-                <div class="swiper-button-next">
+                <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
                 <div class="products__search">
