--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,41 @@
             а также плоды шиповника в удобной, надежной, вакуумной упаковке
             разного объема</div>
         @@include('html/products.html', {})
+        <a href="#" class="production__btn">
+            Перейти в магазин
+        </a>
+    </section>
+    @@include('html/about-manufacture.html', {})
+    <section class="info">
+        <div class="info__wrapper">
+            <div class="info__group">
+                <div class="info__group-item">
+                    <div class="info__title">240</div>
+                    <div class="info__subtitle">Cмешанных <br>
+                        садов</div>
+                </div>
+                <div class="info__group-item">
+                    <div class="info__title">1</div>
+                    <div class="info__subtitle">Тепличного <br>
+                        комплекса</div>
+                </div>
+                <div class="info__group-item">
+                    <div class="info__title">10</div>
+                    <div class="info__subtitle">Первая промышленная плантация <br>
+                        шиповника в Украине</div>
+                </div>
+                <div class="info__group-item">
+                    <div class="info__title">80</div>
+                    <div class="info__subtitle">Приживаемости <br>
+                        саженцев</div>
+                </div>
+            </div>
+        </div>
     </section>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
+    <script src="js/script.products.js"></script>
+    <script src="js/script.about-manuf.js"></script>
 </body>
 
 </html>
