Made section.target

--- a/src/html/about-manufacture.html
+++ b/src/html/about-manufacture.html
@@ -1,9 +1,9 @@
 <section class="about-manufacturer @@theme">
     <div class="about-manufacturer__container">
         <div class="about-manufacturer__wrapper">
-            <div class="about-manufacturer__title">
+            <h2 class="about-manufacturer__title">
                 О производителе
-            </div>
+            </h2>
             <div class="about-manufacturer__subtitle">
                 <span>Сельскохозяйственный обслуживающий кооператив
                     “Орех Причерноморья”</span> выращивает смешанные сады
@@ -19,10 +19,10 @@
         <div class="swiper about-manufacturer__slider">
             <div class="swiper-wrapper about-manufacturer__swiper-wrapper">
                 <div class="swiper-slide about-manufacturer__slide">
-                    <img src="@img/about-manufacturer/about-manufacturer.png" alt="tractor">
+                    <img src="@img/about-manufacturer/about-manufacturer.png" alt="tractor" loading="lazy">
                 </div>
                 <div class="swiper-slide about-manufacturer__slide">
-                    <img src="@img/about-manufacturer/about-manufacturer2.png" alt="tractor">
+                    <img src="@img/about-manufacturer/about-manufacturer2.png" alt="tractor" loading="lazy">
                 </div>
             </div>
             <div class="swiper-button-prev about-manufacturer__btn-prev">
