--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,18 @@
             </div>
         </div>
     </section>
+    <section class="target">
+        <div class="target__bg-img">
+            <img src="@img/profit.png" alt="a man with nuts in a box" loading="lazy">
+        </div>
+        <div class="target__title">Наша главная цель - получить максимальную прибыль с одного гектара</div>
+        <div class="target__play">
+            <div class="target__play-img">
+                <img src="@icons/main/play.svg" alt="play">
+            </div>
+        </div>
+        <div class="target__subtitle">Cмотреть видео о производстве</div>
+    </section>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.products.js"></script>
