made section.benefits-products

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,65 @@
         </div>
         <div class="target__subtitle">Cмотреть видео о производстве</div>
     </section>
+    <section class="benefits-products">
+        <h2 class="benefits-products__title">
+            О пользе продукта
+        </h2>
+        <div class="benefits-products__subtitle">
+            Каждый вид ореха содержит свой неповторимый уникальный <br>
+            баланс витаминов, и микроэлементов
+        </div>
+        <div class="benefits-products__group">
+            <div class="benefits-products__group-item">
+                <div class="benefits-products__group-bg-img">
+                    <img src="@img/main/walnut.png" alt="walnut">
+                </div>
+                <div class="benefits-products__img">
+                    <img src="@icons/main/walnut.svg" alt="walnut">
+                </div>
+                <div class="benefits-products__group-title">
+                    Грецкий орех
+                </div>
+                <div class="benefits-products__group-subtitle">
+                    Дерево жизни - так часто величают грецкий орех, поскольку с давних пор он кормил, восстанавливал
+                    силы и лечил человека. <br><br>
+                    Даже небольшая горсть грецких орехов - это кладезь витаминов и хорошая профилактика многих
+                    заболеваний
+                </div>
+            </div>
+            <div class="benefits-products__group-item">
+                <div class="benefits-products__group-bg-img">
+                    <img src="@img/main/hazelnut.png" alt="hazelnut" loading="lazy">
+                </div>
+                <div class="benefits-products__img">
+                    <img src="@icons/main/hazelnut.svg" alt="hazelnut">
+                </div>
+                <div class="benefits-products__group-title">
+                    Фундук
+                </div>
+                <div class="benefits-products__group-subtitle">
+                    Фундук - это древесный орех, который растет на деревьях фундука <br><br>
+                    Он имеет твердую оболочку, которую нужно сломать, чтобы достать ядро, которое можно есть или
+                    использовать в кулинарии
+                </div>
+            </div>
+            <div class="benefits-products__group-item">
+                <div class="benefits-products__group-bg-img">
+                    <img src="@img/main/rosehip.png" alt="rosehip" loading="lazy">
+                </div>
+                <div class="benefits-products__img">
+                    <img src="@icons/main/rosehip.svg" alt="rosehip">
+                </div>
+                <div class="benefits-products__group-title">
+                    Шиповник
+                </div>
+                <div class="benefits-products__group-subtitle">
+                    Шиповник известен своими плодами - крупными красными ягодами, которые называются шиповниками или шиповниковыми ягодами <br><br>
+                    Они используются для производства джемов, мармеладов, компотов, сиропов и других продуктов питания
+                </div>
+            </div>
+        </div>
+    </section>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.products.js"></script>
