--- a/src/index.html
+++ b/src/index.html
@@ -132,10 +132,12 @@
             </div>
         </div>
     </section>
+    @@include('html/eco.html', {})
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.products.js"></script>
     <script src="js/script.about-manuf.js"></script>
+    <script src="js/script.eco.js"></script>
 </body>
 
 </html>
