--- a/src/index.html
+++ b/src/index.html
@@ -133,11 +133,13 @@
         </div>
     </section>
     @@include('html/eco.html', {})
+    @@include('html/mini-news.html', {})
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.products.js"></script>
     <script src="js/script.about-manuf.js"></script>
     <script src="js/script.eco.js"></script>
+    <script src="js/script.mini-news.js"></script>
 </body>
 
 </html>
