add adaptive for promo

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </section>
-    <section class="production">
+    <!-- <section class="production">
         <h2 class="production__title">Продукция</h2>
         <div class="production__subtitle">Экологически чистые, качественные ядра грецкого ореха и фундука,
             а также плоды шиповника в удобной, надежной, вакуумной упаковке
@@ -135,7 +135,7 @@
     @@include('html/eco.html', {})
     @@include('html/mini-news.html', {})
     @@include('html/footer.html', {})
-    @@include('html/script.html', {})
+    @@include('html/script.html', {}) -->
     <script src="js/script.products.js"></script>
     <script src="js/script.about-manuf.js"></script>
     <script src="js/script.eco.js"></script>
