--- a/src/index.html
+++ b/src/index.html
@@ -35,33 +35,8 @@
         </a>
     </section>
     @@include('html/about-manufacture.html', {})
-    <!-- <section class="info">
-        <div class="info__wrapper">
-            <div class="info__group">
-                <div class="info__group-item">
-                    <div class="info__title">240</div>
-                    <div class="info__subtitle">Cмешанных <br>
-                        садов</div>
-                </div>
-                <div class="info__group-item">
-                    <div class="info__title">1</div>
-                    <div class="info__subtitle">Тепличного <br>
-                        комплекса</div>
-                </div>
-                <div class="info__group-item">
-                    <div class="info__title">10</div>
-                    <div class="info__subtitle">Первая промышленная плантация <br>
-                        шиповника в Украине</div>
-                </div>
-                <div class="info__group-item">
-                    <div class="info__title">80</div>
-                    <div class="info__subtitle">Приживаемости <br>
-                        саженцев</div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="target">
+    @@include('html/info.html', {})
+    <!-- <section class="target">
         <div class="target__bg-img">
             <img src="@img/profit.png" alt="a man with nuts in a box" loading="lazy">
         </div>
