add adaptive for benefits-products

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </section>
     @@include('html/about-manufacture.html', {})
     @@include('html/info.html', {})
-    <!-- <section class="target">
+    <section class="target">
         <div class="target__bg-img">
             <img src="@img/profit.png" alt="a man with nuts in a box" loading="lazy">
         </div>
@@ -107,7 +107,7 @@
             </div>
         </div>
     </section>
-    @@include('html/eco.html', {})
+    <!-- @@include('html/eco.html', {})
     @@include('html/mini-news.html', {})
     @@include('html/footer.html', {}) -->
     @@include('html/script.html', {})
