made an adaptation for the entire homepage

--- a/src/html/mini-news.html
+++ b/src/html/mini-news.html
@@ -35,7 +35,8 @@
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
-                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов, не смотря на большой спрос в Европе и отличную...
+                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
+                    не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
                     <a href="#" class="mini-news__link">
@@ -58,7 +59,8 @@
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
-                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов, не смотря на большой спрос в Европе и отличную...
+                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
+                    не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
                     <a href="#" class="mini-news__link">
@@ -67,7 +69,7 @@
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
                         </div>
                     </a>
-                </objec>
+                    </objec>
             </a>
             <a class="swiper-slide mini-news__slide">
                 <div class="mini-news__img">
@@ -81,7 +83,8 @@
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
-                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов, не смотря на большой спрос в Европе и отличную...
+                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
+                    не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
                     <a href="#" class="mini-news__link">
@@ -104,7 +107,8 @@
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
-                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов, не смотря на большой спрос в Европе и отличную...
+                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
+                    не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
                     <a href="#" class="mini-news__link">
@@ -127,7 +131,8 @@
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
-                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов, не смотря на большой спрос в Европе и отличную...
+                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
+                    не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
                     <a href="#" class="mini-news__link">
@@ -136,7 +141,7 @@
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
                         </div>
                     </a>
-                </objec>
+                    </objec>
             </a>
             <a class="swiper-slide mini-news__slide">
                 <div class="mini-news__img">
@@ -150,7 +155,8 @@
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
-                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов, не смотря на большой спрос в Европе и отличную...
+                    Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
+                    не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
                     <a href="#" class="mini-news__link">
@@ -163,4 +169,7 @@
             </a>
         </div>
     </div>
+    <a href="#" class="mini-news__btn">
+        Смотреть все новости
+    </a>
 </section>
