--- a/src/index.html
+++ b/src/index.html
@@ -107,9 +107,9 @@
             </div>
         </div>
     </section>
-    <!-- @@include('html/eco.html', {})
+    @@include('html/eco.html', {})
     @@include('html/mini-news.html', {})
-    @@include('html/footer.html', {}) -->
+    @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.products.js"></script>
     <script src="js/script.about-manuf.js"></script>
