made about-company page

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -53,7 +53,7 @@
     <div class="sidemenu__navigation">
         <ul class="sidemenu__list">
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Магазин</a></li>
-            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">О производстве</a></li>
+            <li class="sidemenu__list-item"><a href="@html/about-company.html" class="sidemenu__list-link">О производстве</a></li>
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оплата и доставка</a></li>
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
             </li>
@@ -184,7 +184,7 @@
                         <a href="#" class="header__list-link">Магазин</a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">О производстве
+                        <a href="@html/about-company.html" class="header__list-link">О производстве
                         </a>
                     </li>
                     <li class="header__list-item">
