made gallery unit

--- a/src/about-company.html
+++ b/src/about-company.html
@@ -56,13 +56,15 @@
                 </div>
                 <div class="founder__history-subtitle">
                     Наше предприятие основано в 2012 году
-                    для закладки смешанного сада грецкого ореха и фундука. <br><br>
-                    На сегодня мы уже заложили более 100 гектаров сада и продолжаем расширять свои насаждения. Кроме выращивания грецкого ореха и фундука, мы занимаемся выращиванием саженцев, разведением и выращиванием овец, а также являемся первой в Украине компанией, приступившей к промышленному выращиванию трюфелей на корнях фундука. <br><br>
-                    Земля, которой пользуется кооператив, является собственностью членов нашего кооператива.
+                    <br> для  закладки смешанного сада грецкого ореха <br> и фундука. <br><br>
+                    На сегодня мы уже заложили более 100 гектаров <br> сада и продолжаем расширять свои насаждения. Кроме выращивания грецкого ореха и фундука, мы занимаемся выращиванием саженцев, разведением и выращиванием овец, а также являемся первой в Украине компанией, приступившей к промышленному выращиванию трюфелей на корнях фундука. <br><br>
+                    Земля, которой пользуется кооператив, <br> является собственностью членов нашего кооператива.
                 </div>
             </div>
         </div>
     </section>
+    @@include('html/info.html', {})
+    @@include('html/gallery.html', {mod: 'gallery__group-item_hidden'})
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.about-manuf.js"></script>
