--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -101,7 +101,7 @@
                 <a href="#" class="footer__list-link">Оплата и доставка</a>
             </li>
             <li class="footer__list-item">
-                <a href="#" class="footer__list-link">О производстве</a>
+                <a href="@html/about-company.html" class="footer__list-link">О производстве</a>
             </li>
             <li class="footer__list-item">
                 <a href="#" class="footer__list-link">Новости и статьи</a>
