--- a/src/html/products.html
+++ b/src/html/products.html
@@ -1,5 +1,6 @@
 <div class="products">
     <div class="products__group">
+        <!-- TODO пересмотреть слайдер, не создаётся picture -->
         <div class="products__item">
             <div class="swiper products__slider">
                 <div class="swiper-wrapper products__wrapper">
