--- a/src/html/info.html
+++ b/src/html/info.html
@@ -1,4 +1,4 @@
-<section class="info">
+<section class="info @@theme">
     <div class="info__wrapper">
         <div class="info__group">
             <div class="info__group-item">
