made adaptations to the Gallery block and the About page

--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -3,25 +3,27 @@
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__subtitle">Кадры социальной активности компании</div>
         <div class="gallery__group">
-            <div class="gallery__group-item">
-                <div class="gallery__group-side">
-                    <div class="gallery__group-side-title">SIAL Paris 2018 </div>
-                    <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
+            <div class="gallery__container1">
+                <div class="gallery__group-item">
+                    <div class="gallery__group-side">
+                        <div class="gallery__group-side-title">SIAL Paris 2018 </div>
+                        <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
+                    </div>
+                    <div class="gallery__group-img">
+                        <img src="@img/gallery/photo1.png" alt="photo">
+                    </div>
                 </div>
-                <div class="gallery__group-img">
-                    <img src="@img/gallery/photo1.png" alt="photo">
+                <div class="gallery__group-item">
+                    <div class="gallery__group-side">
+                        <div class="gallery__group-side-title">SIAL Paris 2018 </div>
+                        <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
+                    </div>
+                    <div class="gallery__group-img">
+                        <img src="@img/gallery/photo2.png" alt="photo">
+                    </div>
                 </div>
             </div>
-            <div class="gallery__group-item">
-                <div class="gallery__group-side">
-                    <div class="gallery__group-side-title">SIAL Paris 2018 </div>
-                    <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
-                </div>
-                <div class="gallery__group-img">
-                    <img src="@img/gallery/photo2.png" alt="photo">
-                </div>
-            </div>
-            <div class="gallery__group-item">
+            <div class="gallery__group-item gallery__group-item_wider">
                 <div class="gallery__group-wrapper">
                     <div class="gallery__group-play">
                         <img src="@icons/main/play.svg" alt="play">
@@ -34,32 +36,34 @@
                     <img src="@img/gallery/photo3.png" alt="photo">
                 </div>
             </div>
-            <div class="gallery__group-item">
-                <div class="gallery__group-side">
-                    <div class="gallery__group-side-title">SIAL Paris 2018 </div>
-                    <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
-                </div>
-                <div class="gallery__group-img">
-                    <img src="@img/gallery/photo4.png" alt="photo">
-                </div>
-            </div>
-            <div class="gallery__group-item">
-                <div class="gallery__group-side">
-                    <div class="gallery__group-side-title">SIAL Paris 2018 </div>
-                    <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
-                </div>
-                <div class="gallery__group-img">
-                    <img src="@img/gallery/photo5.png" alt="photo">
-                </div>
-            </div>
-            <div class="gallery__group-item">
-                <div class="gallery__group-wrapper">
-                    <div class="gallery__group-play">
-                        <img src="@icons/main/play.svg" alt="play">
+            <div class="gallery__container2">
+                <div class="gallery__group-item">
+                    <div class="gallery__group-side">
+                        <div class="gallery__group-side-title">SIAL Paris 2018 </div>
+                        <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
+                    </div>
+                    <div class="gallery__group-img">
+                        <img src="@img/gallery/photo4.png" alt="photo">
                     </div>
                 </div>
-                <div class="gallery__group-img">
-                    <img src="@img/gallery/photo6.png" alt="photo">
+                <div class="gallery__group-item">
+                    <div class="gallery__group-side">
+                        <div class="gallery__group-side-title">SIAL Paris 2018 </div>
+                        <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей продовольственной выставке Европы SIAL Paris 2018 </div>
+                    </div>
+                    <div class="gallery__group-img">
+                        <img src="@img/gallery/photo5.png" alt="photo">
+                    </div>
+                </div>
+                <div class="gallery__group-item">
+                    <div class="gallery__group-wrapper">
+                        <div class="gallery__group-play">
+                            <img src="@icons/main/play.svg" alt="play">
+                        </div>
+                    </div>
+                    <div class="gallery__group-img">
+                        <img src="@img/gallery/photo6.png" alt="photo">
+                    </div>
                 </div>
             </div>
             <div class="gallery__group-item @@mod">
