--- a/src/about-company.html
+++ b/src/about-company.html
@@ -16,16 +16,18 @@
         <div class="promo__bg-img">
             <img src="@img/about-company/garden.png" alt="garden" loading="lazy">
         </div>
-        <div class="promo__path">
-            <a href="@html/index.html" class="promo__path-link">Главная</a>
-            <img src="@icons/arrow-path.svg" alt="arrow-path">
-            О производстве
-        </div>
-        <h1 class="promo__title">Орех Причерноморья</h1>
-        <div class="promo__subtitle">Единственный в Украине сад совместного выращивание фундука и грецкого ореха</div>
-        <div class="promo__play">
-            <div class="promo__play-img">
-                <img src="@icons/main/play.svg" alt="play">
+        <div class="promo__wrapper">
+            <div class="promo__path">
+                <a href="@html/index.html" class="promo__path-link">Главная</a>
+                <img src="@icons/arrow-path.svg" alt="arrow-path">
+                О производстве
+            </div>
+            <h1 class="promo__title">Орех Причерноморья</h1>
+            <div class="promo__subtitle">Единственный в Украине сад совместного выращивание фундука и грецкого ореха</div>
+            <div class="promo__play">
+                <div class="promo__play-img">
+                    <img src="@icons/main/play.svg" alt="play">
+                </div>
             </div>
         </div>
     </section>
@@ -56,18 +58,22 @@
                 </div>
                 <div class="founder__history-subtitle">
                     Наше предприятие основано в 2012 году
-                    <br> для  закладки смешанного сада грецкого ореха <br> и фундука. <br><br>
-                    На сегодня мы уже заложили более 100 гектаров <br> сада и продолжаем расширять свои насаждения. Кроме выращивания грецкого ореха и фундука, мы занимаемся выращиванием саженцев, разведением и выращиванием овец, а также являемся первой в Украине компанией, приступившей к промышленному выращиванию трюфелей на корнях фундука. <br><br>
-                    Земля, которой пользуется кооператив, <br> является собственностью членов нашего кооператива.
+                    <br class="founder__history-porting"> для  закладки смешанного сада грецкого ореха <br class="founder__history-porting"> и фундука. <br><br>
+                    На сегодня мы уже заложили более 100 гектаров <br class="founder__history-porting"> сада и продолжаем расширять свои насаждения. Кроме выращивания грецкого ореха и фундука, мы занимаемся выращиванием саженцев, разведением и выращиванием овец, а также являемся первой в Украине компанией, приступившей к промышленному выращиванию трюфелей на корнях фундука. <br><br>
+                    Земля, которой пользуется кооператив, <br class="founder__history-porting"> является собственностью членов нашего кооператива.
                 </div>
             </div>
         </div>
     </section>
     @@include('html/info.html', {})
     @@include('html/gallery.html', {mod: 'gallery__group-item_hidden'})
+    @@include('html/eco.html', {})
+    @@include('html/mini-news.html')
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="js/script.about-manuf.js"></script>
+    <script src="js/script.eco.js"></script>
+    <script src="js/script.mini-news.js"></script>
 </body>
 
 </html>
