Made the structure of the 'Wholesale and corporate customers' page

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -55,7 +55,7 @@
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Магазин</a></li>
             <li class="sidemenu__list-item"><a href="@html/about-company.html" class="sidemenu__list-link">О производстве</a></li>
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оплата и доставка</a></li>
-            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
+            <li class="sidemenu__list-item"><a href="@html/for-clients.html" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
             </li>
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Новости и статьи</a></li>
             <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Контакты</a></li>
@@ -191,7 +191,7 @@
                         <a href="#" class="header__list-link">Оплата и доставка</a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">Оптовым и корпоративным клиентам</a>
+                        <a href="@html/for-clients.html" class="header__list-link">Оптовым и корпоративным клиентам</a>
                     </li>
                     <li class="header__list-item">
                         <a href="#" class="header__list-link">Новости и статьи</a>
